--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -27,7 +27,7 @@
         <header>
             <div id="profilePhoto" onclick="toggleWindow()"></div>
             <div id="logo">
-                <div id="greetings"> Good </div>
+                <div id="greetings"></div>
                 </div>
             </div>
         </header>
