--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script type="text/javascript" src="scripts/stats/githubstats_barchart.js"></script>
+    <title>Graph</title>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script type="text/javascript" src="scripts/data_analysis.js"></script>
 </head>
 <body>
     <h1>Hello</h1>
-    <div id="barChart"></div>
+    <div id="barChart1"></div>
 </body>
 </html>
